agregue la estructura html del ofter-banner

--- a/html/pricing.html
+++ b/html/pricing.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pricing</title>
+    <link rel="stylesheet" href="Style/pricing.css">
 </head>
 <body>
+    <div class="ofter_banner">
+        <img src="../Img-pricing/img-ofterbanner/Image.jpg" alt="imagen-ofter-banner">
+        <div class="letras_signos">
+            <img src="../Img-pricing/img-ofterbanner/Icon (3).png" alt="icono-signo-peso">
+            <img src="../Img-pricing/img-ofterbanner/No Fee Guarantee®.png" alt="letras">
+            <img src="../Img-pricing/img-ofterbanner/We’ll win your injury case, or it’s free..png" alt="letras">
+        </div>
+       
+    </div>
     
 </body>
 </html>
