--- a/html/Index.html
+++ b/html/Index.html
@@ -10,17 +10,17 @@
     <footer>
         <div class="footer">
             <div class="Footer_Encabezado">
-                <img src="/Imagenes/Encabezado_footer.png" alt="">
+                <img src="/imgs/Img-Footer/Encabezado_Footer.png" alt="">
             </div>
             <div class="Footer_Medio">
-                <div class="Quick_Link">
-                    <div class="Quick_Titulo">
+                <div class="Container Quick">
+                    <div class="Titulos_Footer">
                         <hr>
                         <h3>Quick Link</h3>
                         <hr>
                     </div>
                     <div class="Quick_Cuerpo">
-                        <div class="Quick_Izquierda">
+                        <div class="Quicks Izquierda">
                             <a>Home</a>
                             <a>About</a>
                             <a>Contact</a>
@@ -28,7 +28,7 @@
                             <a>Blog Post</a>
                             <a>Lawyers</a>
                         </div>
-                        <div class="Quick_Derecha">
+                        <div class="Quicks Derecha">
                             <a>Lawyer Single</a>
                             <a>Case Results</a>
                             <a>Practice Areas</a>
@@ -37,13 +37,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="Utility_Page">
-                    <div class="Utility_Titulo">
+                <div class="Container Utility">
+                    <div class="Titulos_Footer">
                         <hr>
                         <h3>Utility Page</h3>
                         <hr>
                     </div>
-                    <div class="Utility_Cuerpo">
+                    <div class="Cuerpo Utility">
                         <a>Star Here</a>
                         <a>Style Guide</a>
                         <a>404 Not Found</a>
@@ -52,13 +52,13 @@
                         <a href="">Changelog</a>
                     </div>
                 </div>
-                <div class="Practice_Area">
-                    <div class="Practice_Titulo">
+                <div class="Container Practice">
+                    <div class="Titulos_Footer">
                         <hr>
                         <h3>Practice Area</h3>
                         <hr>
                     </div>
-                    <div class="Practice_Cuerpo">
+                    <div class="Cuerpo Practice">
                         <a>Family Law</a>
                         <a>Criminal Law</a>
                         <a>Personal Injury</a>
@@ -66,30 +66,31 @@
                         <a href="">Bussines Law</a>
                     </div>
                 </div>
-                <div class="Contact_Us">
-                    <div class="Contact_Titulo">
+                <div class="Container Contact">
+                    <div class="Titulos_Footer">
                         <hr>
                         <h3>Contact Us</h3>
                         <hr>
                     </div>
                     <div class="Contact_Cuerpo">
-                        <h4>Head Office Address 121 King Street,<br>Melbourne West,Australia</h4>
-                        <h4>Phone: (011) 9876 54321<br>Email:Info@Example.com</h4>
+                        <h4>Head Office Address 121 King Street,<br><br>Melbourne West,Australia</h4>
+                        <h4>Phone: (011) 9876 54321<br><br>Email:Info@Example.com</h4>
                     </div>
                 </div>
             </div>
             <div class="Footer_Final">
                 <hr>
                 <div class="Final_Cuerpo">
-                    <img src="/Imagenes/Copyright © Attorney Law _ Designed by VictorFlow Templates - Powered by Webflow.png" alt="">
+                    <h3 class="Copyright">Copyright © <span>Attorney Law</span> | Designed by <span>VictorFlow Templates</span> - Powered by Webflow</h3>
                     <div class="Redes">
                         <h4>Follow:</h4>
-                        <img src="/Imagenes/Insta.png" alt="">
-                        <img src="/Imagenes/Fb.png" alt="">
-                        <img src="/Imagenes/Twiter.png" alt="">
-                        <img src="/Imagenes/Pintrest.png" alt="">
+                        <img src="/imgs/Img-Footer/Insta.png" alt="">
+                        <img src="/imgs/Img-Footer/Fb.png" alt="">
+                        <img src="/imgs/Img-Footer/Twiter.png" alt="">
+                        <img src="/imgs/Img-Footer/Pintrest.png" alt="">
                     </div>
                 </div>
+                <hr>
             </div>
         </div>
     </footer>
