Avance en la pantalla Principal-Homepage

--- a/html/Index.html
+++ b/html/Index.html
@@ -7,6 +7,130 @@
     <link rel="stylesheet" href="/Style/style_footer.css".css>
 </head>
 <body>
+    <div class="Abouts_Us">
+        <div class="Abouts_Cuerpo">
+            <div class="imgs_Abouts">
+                <img src="/imgs/Img-Homepage/Biblioteca.png" alt="">
+                <img src="/imgs/Img-Homepage/Martillo.png" alt="">
+            </div>
+            <div class="Texts_Abouts">
+                <div class="Texts_Titulo">
+                    <h2>The Simple Choice<br>for Complex Litigation</h2>
+                    <img src="/imgs/Img-Homepage/Icon.png" alt="">
+                </div>
+                <div class="Texts_Medio">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have su alteration <br>
+                         in some form, by injected humour, oir randomised workds which don't look even slightly believable. If <br>
+                         you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything.</p>
+                    <div class="Medio_img"><img src="/imgs/Img-Homepage/image-Peter.png" alt=""><h3>Peeter Park</h3></div>
+                </div>
+                <div class="Texts_Final">
+                    <div class="Cases_95">
+                        <img src="/imgs/Img-Homepage/Icon_cases95.svg" alt="">
+                        <p>95%<br>Case Success</p>
+                    </div>
+                    <div class="Years_Experiance">
+                        <img src="/imgs/Img-Homepage/35+.png" alt="">
+                        <p>Years<br>Experiance</p>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>
+    <div class="Practis_Areas">
+        <div class="Practis_Cuerpo">
+            <div class="Practis_Encabezado">
+                <div class="Practis_Titulo">
+                    <h2>Explore<br>Our Practice Arease</h2>
+                    <img src="/imgs/Img-Homepage/Icon.png" alt="">
+                </div>
+                <hr>
+                <p>There are <span>many variations of passages</span> of Lorem Ipsum available, but the majority<br>
+                     have su alteration in some form, by injected humour, oir <span>randomised workds</span> which<br>
+                     don't look even slightly believable.</p>
+            </div>
+            <div class="Practis_Article">
+                <article class="article Bussines">
+                    <div>
+                        <h3>Business Law</h3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Bussines.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+                <article class="article Construction">
+                    <div>
+                        <h3>Construction Lawh3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Construct.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+                <article class="article Car">
+                    <div>
+                        <h3>Car Accident</h3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Car.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+                <article class="article Wrongful">
+                    <div>
+                        <h3>Wrongful Death<h3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Wrongful.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+                <article class="article Criminal">
+                    <div>
+                        <h3>Criminal Law</h3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Criminal.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+                <article class="article Family">
+                    <div>
+                        <h3>Family Law</h3>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </div>
+                    <hr>
+                    <div class="button_Article">
+                        <img src="/imgs/Img-Homepage/img-Family.png" alt="">
+                        <button>Learn More</button>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="footer">
             <div class="Footer_Encabezado">
