Avances dela pagina principal-Homepage

--- a/html/Index.html
+++ b/html/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/Style/Homepage.css".css>
     <link rel="stylesheet" href="/Style/style_footer.css".css>
 </head>
 <body>
@@ -65,7 +66,7 @@
                 </article>
                 <article class="article Construction">
                     <div>
-                        <h3>Construction Lawh3>
+                        <h3>Construction Law<h3>
                         <p>There are many variations of passages<br>
                             of Lorem Ipsum available, but majority<br>
                             going to use a passage.</p>
@@ -130,6 +131,284 @@
                 </article>
             </div>
         </div>
+    </div>
+    <div class="Counters">
+        <div class="Counters_Cuerpo">
+            <div class="Counters_Encabezado">
+                <div class="Counters_Titulo">
+                    <h2>If you're in trouble<br>we can help.</h2>
+                    <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+                </div>
+                <p>There are  of Lorem Ipsum available, but the majority have su alteration in some<br>
+                     form, by injected humour, oir  which don't look even slightly believable.</p>
+                <div class="statistics_Counters">
+                    <div class="statistics">
+                        <img src="/imgs/Img-Homepage/Chart-1.png" alt="">
+                        <h4>Trusted Clients<br><span>There are  of Lorem Ipsum</span></h4>
+                    </div>
+                    <div class="statistics">
+                        <img src="/imgs/Img-Homepage/Chart-2.png" alt="">
+                        <h4>Successful Cases<br><span>There are  of Lorem Ipsum</span></h4>
+                    </div>
+                    <img src="/imgs/Img-Homepage/Cases-Criminal.png" alt="">
+                </div>
+            </div>
+            <hr>
+            <div class="Counters_logos">
+                <img class="Logo-Encabezado" src="/imgs/Img-Homepage/Title-Logos.png" alt="">
+                <div class="Logos">
+                    <img src="/imgs/Img-Homepage/Logo_Home.png" alt="">
+                    <img src="/imgs/Img-Homepage/Logo_Vs.png" alt="">
+                    <img src="/imgs/Img-Homepage/Logo_Brand.png" alt="">
+                    <img src="/imgs/Img-Homepage/Logo_Nature.png" alt="">
+                    <img src="/imgs/Img-Homepage/Logo_Classic.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="History_Experiance">
+        <div class="History_Cuerpo">
+            <div class="History_Izquierda">
+                <div class="Izquierda_Titulo">
+                    <h2>We Are Top Lawyers<br>And History</h2>
+                    <img src="/imgs/Img-Homepage/Icon.png" alt="">
+                </div>
+                <div class="Izquierda_Cuerpo">
+                    <article class="article_Izquierda">
+                        <h5>1995 - Opening</h5>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </article>
+                    <article class="article_Izquierda">
+                        <h5>2011 - Open Branch Office</h5>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </article>
+                    <article class="article_Izquierda">
+                        <h5>2015 - 18000K Client’s</h5>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </article>
+                    <article class="article_Izquierda">
+                        <h5>2020– Best Law & Firm Awwards</h5>
+                        <p>There are many variations of passages<br>
+                            of Lorem Ipsum available, but majority<br>
+                            going to use a passage.</p>
+                    </article>
+                </div>
+            </div>
+            <img class="History_Medio" src="/imgs/Img-Homepage/Balanza.jpg" alt="">
+            <div class="History_Derecha">
+                <div class="Derecha_Titulo">
+                    <h2>We Are Specialised<br>And Experienced</h2>
+                    <img src="/imgs/Img-Homepage/Icon.png" alt="">
+                </div>
+                <div class="Derecha_Cuerpo">
+                    <p>
+                        At vero eos et accusamus et iusto odio dignissimos<br>
+                        ducimus qui blanditiis praesentium deleniti atque<br>
+                        corrupti quos  molestias excepturi odio dignissimos<br>
+                        ducimus qui blanditiis sint occaecati .
+                    </p>
+                    <div class="statistics_Experiance">
+                        <div class="Barras">
+                            <div>
+                                <h5>Divorce And Family Cases</h5>
+                                <h5>75%</h5>
+                            </div>
+                            <img src="/imgs/Img-Homepage/Digram (2).png" alt="">
+                        </div>
+                        <div class="Barras">
+                            <div>
+                                <h5>Property And Construction</h5>
+                                <h5>80%</h5>
+                            </div>
+                            <img src="/imgs/Img-Homepage/Digram.png" alt="">
+                        </div>
+                        <div class="Barras">
+                            <div>
+                                <h5>Banking And Finance</h5>
+                                <h5>75%</h5>
+                            </div>
+                            <img src="/imgs/Img-Homepage/Digram (2).png" alt="">
+                        </div>
+                        <div class="Barras">
+                            <div>
+                                <h5>Banking And Finance</h5>
+                                <h5>90%</h5>
+                            </div>
+                            <img src="/imgs/Img-Homepage/Digram(1).png" alt="">
+                        </div>
+                    </div>
+                    <button>Free Consulting</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Client_Opinions">
+        <div class="Client_Cuerpo">
+            <div class="Client_Encabezado">
+                <h2>Client Opinions & Reviews</h2>
+                <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+            </div>
+            <div class="Client_Testimonial">
+                <div class="Client_Inverso">
+                    <div class="Inverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                    <div class="Persona_Inverso">
+                        <img src="/imgs/Img-Homepage/img-Nattasha.png" alt="">
+                        <h4>Nattasha<br><span>Junior Lawyer</span></h4>
+                    </div>
+                </div>
+                <div class="Client_Reverso">
+                    <div class="Persona_Reverso">
+                        <img src="/imgs/Img-Homepage/img-Minci.png" alt="">
+                        <h4>Minci pall<br><span>Consultant</span></h4>
+                    </div>
+                    <div class="Reverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                </div>
+                <div class="Client_Inverso">
+                    <div class="Inverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                    <div class="Persona_Inverso">
+                        <img src="/imgs/Img-Homepage/img-Julia.png" alt="">
+                        <h4>Julia Rose<br><span>Consultant</span></h4>
+                    </div>
+                </div>
+                <div class="Client_Reverso">
+                    <div class="Persona_Reverso">
+                        <img src="/imgs/Img-Homepage/img-John.png" alt="">
+                        <h4>John David<br><span>Designer</span></h4>
+                    </div>
+                    <div class="Reverso_Texto">
+                        <img src="/imgs/Img-Homepage/Comillas.png" alt="">
+                        <p>There are  of Lorem Ipsum<br>
+                             available, but the majority<br>
+                             have su alteration in some<br>
+                             form, by injected oir  which<br>
+                             don't look even slightly<br>
+                              believable.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Team">
+        <div class="Team_Cuerpo">
+            <div class="Team_Encabezado">
+                <h2>Our Experienced Attorney Are Ready<br>
+                    To answer any questions</h2>
+                    <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+            </div>
+            <div class="Team_Miembros">
+                <div class="Miembros_img">
+                    <div class="Imagen_Miembros">
+                        <img class="Thomas" src="/imgs/Img-Homepage/img-Thomas.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                    <div class="Imagen_Miembros">
+                        <img class="Nikolona" src="/imgs/Img-Homepage/img-Nikolona.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                    <div class="Imagen_Miembros">
+                        <img class="Michal" src="/imgs/Img-Homepage/img-Michal.png" alt="">
+                        <div class="Redes_Miembros">
+                            <div>
+                                <img src="/imgs/Img-Homepage/Insta.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Fb.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Twiter.svg" alt="">
+                                <img src="/imgs/Img-Homepage/Pintrest.svg" alt="">
+                            </div>
+                            <hr>
+                            <h3>Thomas Daniyel<br><span>Civil Attorney</span></h3>
+                        </div>
+                    </div>
+                </div>
+                <button>Meet Attorney</button>
+            </div>
+        </div>
+    </div>
+    <div class="Consultation_Contact">
+        <div class="Consultation_Cuerpo">
+            <div class="Contacto">
+                <h2>Our Expert professional law team<br>
+                    is always ready to serve you the<br>
+                    best solution!</h2>
+                <p>There are  of Lorem Ipsum available, but the majority have su<br>
+                     alteration in some form, by injected oir  which don't look even<br>
+                     slightly believable.</p>
+                <button>Contact Us</button>
+            </div>
+            <div class="Number_Consulta">
+                <div class="Free_Consultation">
+                    <h3>Get a Free Consultation</h3>
+                    <p>There are  of Lorem Ipsum available, but the majority<br>
+                         by injected humour  which don't look even.</p>
+                    <div class="Call_Us">
+                        <img src="/imgs/Img-Homepage/Icon-Celular.png" alt="">
+                        <span>Call Us On:<br><h5>911-987654321</h5></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Form">
+        <form  class="form_Cuerpo">
+            <div class="form_Datos">
+                <input type="text" name="" id="" placeholder="Full Name *">
+                <input type="text" name="" id="" placeholder="Phone Number *">
+                <input type="text" name="" id="" placeholder="Email Address *">
+                <input type="text" name="" id="" placeholder="Subject *">
+            </div>
+            <div>
+                <label for="">Your Message *</label>
+                <input type="text">
+            </div>
+            <button>Get An Appoinment</button>
+        </form>
     </div>
     <footer>
         <div class="footer">
