--- a/html/Index.html
+++ b/html/Index.html
@@ -60,7 +60,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Bussines.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Bussines.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -73,7 +73,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Construct.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Construct.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -86,7 +86,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Car.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Car.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -99,7 +99,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Wrongful.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Wrongful.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -112,7 +112,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Criminal.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Criminal.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -125,7 +125,7 @@
                     </div>
                     <hr>
                     <div class="button_Article">
-                        <img src="/imgs/Img-Homepage/img-Family.png" alt="">
+                        <div><img src="/imgs/Img-Homepage/img-Family.png" alt=""></div>
                         <button>Learn More</button>
                     </div>
                 </article>
@@ -399,15 +399,15 @@
         <form  class="form_Cuerpo">
             <div class="form_Datos">
                 <input type="text" name="" id="" placeholder="Full Name *">
-                <input type="text" name="" id="" placeholder="Phone Number *">
                 <input type="text" name="" id="" placeholder="Email Address *">
+                <input type="text" name="" id="" placeholder="Phone Number *">
                 <input type="text" name="" id="" placeholder="Subject *">
             </div>
-            <div>
+            <div class="Your_Message">
                 <label for="">Your Message *</label>
                 <input type="text">
+                <button>Get An Appoinment</button>
             </div>
-            <button>Get An Appoinment</button>
         </form>
     </div>
     <footer>
