--- a/html/Index.html
+++ b/html/Index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="/Style/style_footer.css".css>
 </head>
 <body>
+    <div class="Banner">
+        <div class="Banner_Cuerpo">
+            <header></header>
+            <div class="Presentacion">
+                <div class="Titulo">
+                    <img src="/imgs/Img-Homepage/Icon.png" alt="">
+                    <h1>Deeper Understanding<br>
+                        Better Solutions</h1>
+                    <p>It is a long established fact that a reader will be distracted by<br> 
+                        the readable content of a looking at its layout.</p>
+                    <button>Get In Touch</button>
+                </div>
+                <img src="/imgs/Img-Homepage/Banner-Peter.png" alt="">
+            </div>
+        </div>
+    </div>
     <div class="Abouts_Us">
         <div class="Abouts_Cuerpo">
             <div class="imgs_Abouts">
@@ -409,6 +425,110 @@
                 <button>Get An Appoinment</button>
             </div>
         </form>
+    </div>
+    <div class="Blog">
+        <div class="Blog_Cuerpo">
+            <div class="Blog_Encabezado">
+                <h2>Recent Blogs</h2>
+                <img src="/imgs/Img-Homepage/Icon_Cruz.svg" alt="">
+            </div>
+            <div class="Blog_Examination">
+                <div><img src="/imgs/Img-Homepage/img-Accounts.png" alt=""></div>
+                <div class="Examination_Cuerpo">
+                    <h4> Criminal Law, Kidnapping   |   Sunday, July 24, 2022   </h4>
+                    <hr>
+                    <h3>An Independent Examination Of<br>
+                        Charity Accounts</h3>
+                    <p>There are  of Lorem Ipsum available, but the majority have su alteration in<br>
+                         some form, by injected oir  which don't look even slightly believable.</p>
+                    <a href="">Read More</a>
+                </div>
+            </div>
+            <hr>
+            <div class="Blog_Reseñas">
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img-Tribunal.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Sunday, July 24, 2022 </h5>
+                        <hr>
+                        <h3>Prevent A Further Breach of The<br>
+                            Peace In The States</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img-Libros.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Friday, August 15, 2022</h5>
+                        <hr>
+                        <h3>Failing to Carry Out The Terms<br> 
+                            of A Business Contract</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img-Gran Biblioteca.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Sunday, July 24, 2022 </h5>
+                        <hr>
+                        <h3>How Legal Professionals Work:<br>
+                            The Defense Objects In The Event</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img-Corbata.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Sunday, July 24, 2022 </h5>
+                        <hr>
+                        <h3>Riding solo to the rescue of her<br>
+                             beloved nonprofits</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img.Incendio.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Friday, August 15, 2022</h5>
+                        <hr>
+                        <h3>Case Filed on Behalf of Injured<br>
+                             Tugboat Worker</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+                <div class="Reseñas">
+                    <div><img src="/imgs/Img-Homepage/img-Duo legal.png" alt=""></div>
+                    <div class="Reseñas_Cuerpo">
+                        <h5>Legal Advice   |   Sunday, July 24, 2022 </h5>
+                        <hr>
+                        <h3>How Companies Choose Legal<br>
+                             Representation</h3>
+                        <p>There are  of Lorem Ipsum available, but majority<br>
+                             have su alteration in some form, by injected oir<br>
+                             which don't look even slightly believable.</p>
+                        <a href="">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="Image_Footer">
+        <img src="/imgs/Img-Homepage/Tribunal-Footer.jpg" alt="">
     </div>
     <footer>
         <div class="footer">
