--- a/html/Index.html
+++ b/html/Index.html
@@ -6,12 +6,48 @@
     <title>Document</title>
     <link rel="stylesheet" href="/Style/Homepage.css".css>
     <link rel="stylesheet" href="/Style/style_footer.css".css>
+    <link rel="stylesheet" href="/Style/style_header.css">
 </head>
 <body>
     <div class="Banner">
         <div class="Banner_Cuerpo">
-            <header></header>
+            <header>
+                <div class="header_Cuerpo">
+                    <div class="header_Encabezado">
+                        <div class="Logo">
+                            <img src="/imgs/Img-Header/Logo-Header.png" alt="">
+                            <h2>Attorneyster</h2>
+                        </div>
+                        <div class="Encabezado_Buttom">
+                            <div>
+                                <div><img src="/imgs/Img-Header/Candado.png" alt=""></div>
+                                <h4>Cart (0)</h4>
+                            </div>
+                            <button>Book a Consultation</button>
+                        </div>
+                    </div>
+                    <div class="header_Links">
+                        <div class="Links_Principales">
+                            <a href="">Home</a>
+                            <a href="">Abouts Us</a>
+                            <a href="">Pages <img src="/imgs/Img-Header/Flecha-Abajo.png" alt=""></a>
+                            <a href="">Contact Us</a>
+                        </div>
+                        <div class="Email_Call">
+                            <div class="Cell">
+                                <div><img src="/imgs/Img-Header/Cell.png" alt=""></div>
+                                <span>Call Us On:<br><h3>911-987654321</h3></span>
+                            </div>
+                            <div class="Email">
+                                <div><img src="/imgs/Img-Header/Buzon.png" alt=""></div>
+                                <span>Email Us:<br><h3>yourmail@mail.com</h3></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>
             <div class="Presentacion">
+                <img src="/imgs/Img-Homepage/Banner-Peter.png" alt="">
                 <div class="Titulo">
                     <img src="/imgs/Img-Homepage/Icon.png" alt="">
                     <h1>Deeper Understanding<br>
@@ -20,7 +56,6 @@
                         the readable content of a looking at its layout.</p>
                     <button>Get In Touch</button>
                 </div>
-                <img src="/imgs/Img-Homepage/Banner-Peter.png" alt="">
             </div>
         </div>
     </div>
