--- a/html/Index.html
+++ b/html/Index.html
@@ -47,7 +47,6 @@
                 </div>
             </header>
             <div class="Presentacion">
-                <img src="/imgs/Img-Homepage/Banner-Peter.png" alt="">
                 <div class="Titulo">
                     <img src="/imgs/Img-Homepage/Icon.png" alt="">
                     <h1>Deeper Understanding<br>
@@ -56,6 +55,7 @@
                         the readable content of a looking at its layout.</p>
                     <button>Get In Touch</button>
                 </div>
+                <img class="Banner_Peter" src="/imgs/Img-Homepage/Banner-Peter.png" alt="">
             </div>
         </div>
     </div>
