--- a/html/cases.html
+++ b/html/cases.html
@@ -10,16 +10,16 @@
         <nav>
 
         <div class="Content-left">
-            <img class="Icon-logo" src="/imgs/Cases/Header-img/Icon.png" alt="logo">
-            <img class="Icon-Attor" src="/imgs/Cases/Header-img/attorneyster.png" alt="">
+            <img class="Icon-logo" src="/Cases/Header-img/Logo (1).png" alt="logo">
+            <img class="Icon-Attor" src="Cases/Header-img/attorneyster.png" alt="">
         </div>
 
         <div class="Content-right">
-            <img class="Icon-Icon1" src="/imgs/Cases/Header-img/Icon-1.png" alt="Icon">
-            <img class="Icon-Cart" src="/imgs/Cases/Header-img/Cart (0).png" alt="">
+            <img class="Icon-Icon1" src="/Cases/Header-img/Icon-1.png" alt="Icon">
+            <img class="Icon-Cart" src="/Cases/Header-img/Cart (0).png" alt="">
         </div>
 
-        <button class="Btn-Consult"><img class="Icon-Consult" src="/imgs/Cases/Header-img/Book a Consultation.png" alt=""></button>
+        <button class="Btn-Consult"><img class="Icon-Consult" src="/Cases/Header-img/Book a Consultation.png" alt=""></button>
 
         </nav>
 
